<resources>
    <string name="app_name">柚子</string>

    <!--登陸註冊-->
    <string name="login_account_hint">請輸入手機號</string>
    <string name="login_psd_hint">請輸入密碼</string>
    <string name="login_code_hint">請輸入驗證碼</string>
    <string name="login_btn">登錄</string>
    <string name="register_btn">註冊</string>
    <string name="binding_btn">綁定</string>
    <string name="send_code_btn">發送驗證碼</string>

    <!--首頁-->
    <string name="home_bottom_1">首頁</string>
    <string name="home_bottom_2">直播</string>
    <string name="home_bottom_3">充值</string>
    <string name="home_bottom_4">任務</string>
    <string name="home_bottom_5">我的</string>
    <string name="task_recive">&#160;&#160;領取&#160;&#160;</string>

     <!--zxing-->
    <string name="viewfinderview_status_text1">將二維碼放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自動掃描</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>

</resources>
