<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_home_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_home_1"
                android:gravity="center"
                android:paddingTop="7dp"
                android:text="@string/home_bottom_1"
                android:textColor="@color/color_434343"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_home_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_home_2"
                android:gravity="center"
                android:paddingTop="7dp"
                android:text="@string/home_bottom_2"
                android:textColor="@color/color_434343"
                android:textSize="10sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_home_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_home_4"
                android:gravity="center"
                android:paddingTop="7dp"
                android:text="@string/home_bottom_4"
                android:textColor="@color/color_434343"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_home_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/selector_home_5"
                android:gravity="center"
                android:paddingTop="7dp"
                android:text="@string/home_bottom_5"
                android:textColor="@color/color_434343"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_home_3"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/img_home_3"
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_marginTop="12dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_home_3"/>

            <TextView
                android:id="@+id/tv_home_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="-1dp"
                android:text="@string/home_bottom_3"
                android:textColor="@color/color_434343"
                android:textSize="10sp" />

        </LinearLayout>


    </FrameLayout>
</LinearLayout>