<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="100dp"        android:orientation="vertical"        android:paddingLeft="40dp"        android:paddingRight="40dp">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:orientation="horizontal">            <ImageView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:src="@mipmap/icon_account" />            <com.like.base.widget.ClearEditText                android:id="@+id/edt_account"                android:layout_width="match_parent"                android:layout_height="40dp"                android:background="@null"                android:hint="@string/login_account_hint"                android:inputType="phone"                android:maxLength="11"                android:paddingLeft="15dp"                android:textColor="@color/fontColor3"                android:textSize="16sp" />        </LinearLayout>        <View            android:layout_width="match_parent"            android:layout_height="1dp"            android:background="@color/dividerColor" />        <LinearLayout            android:id="@+id/ll_pass"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="40dp"            android:orientation="horizontal">            <ImageView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:src="@mipmap/icon_psd" />            <EditText                android:id="@+id/edt_psd"                android:layout_width="match_parent"                android:layout_height="40dp"                android:background="@null"                android:hint="@string/login_psd_hint"                android:paddingLeft="15dp"                android:inputType="textPassword"                android:textColor="@color/fontColor3"                android:textSize="16sp" />        </LinearLayout>        <View            android:id="@+id/line_pass"            android:layout_width="match_parent"            android:layout_height="1dp"            android:background="@color/dividerColor" />    </LinearLayout>    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:textColor="@color/theme"        android:layout_gravity="center_horizontal"        android:layout_marginTop="50dp"        android:text="綁定手機用於賬號找回請正確填寫"/>    <TextView        android:id="@+id/tv_bingding"        android:layout_width="match_parent"        android:layout_height="42dp"        android:gravity="center"        android:layout_marginTop="24dp"        android:layout_marginLeft="40dp"        android:layout_marginRight="40dp"        android:textColor="@color/white"        android:background="@drawable/bg_theme_21"        android:text="@string/binding_btn"/>    <TextView        android:id="@+id/tv_certificate"        android:layout_width="match_parent"        android:layout_height="42dp"        android:gravity="center"        android:layout_marginTop="40dp"        android:layout_marginLeft="40dp"        android:layout_marginRight="40dp"        android:textColor="@color/theme"        android:background="@drawable/bg_white_21_strock"        android:text="賬號憑證"/></LinearLayout>